fixed pricing alignment

--- a/sass/gutenberg/blocks/_packages-block.scss
+++ b/sass/gutenberg/blocks/_packages-block.scss
@@ -1,4 +1,14 @@
 .package-pricing-block{
+  max-width: $width-wide;
+  padding-left: var(--padding-container-horizontal);
+  padding-right: var(--padding-container-horizontal);
+  width: 100%;
+  @media (min-width: ($width-wide + 40px)) {
+    padding-left: 0;
+    padding-right: 0;
+    margin-left: auto;
+    margin-right: auto;
+  }
   &__inner{
     display: grid;
     gap: 1rem;
@@ -8,6 +18,7 @@
     grid-template-rows: auto auto auto 1fr auto auto auto auto 1fr auto auto auto auto 1fr auto auto auto auto auto 1fr auto;
   }
   @media screen and (max-width: 589px){
+ 
     &__inner{
     max-width: 37rem;
     }
